--- a/main.css
+++ b/main.css
@@ -1,6 +1,12 @@
+body {
+    margin:0px;
+    padding:0px;
+}
+
 .block:hover {
     cursor: pointer;
-    background-color: rgb(219, 111, 111);
+    background-color: rgb(0, 0, 0);
+    opacity: 10%;
 }
 
 .block {
@@ -22,12 +28,16 @@
 }
 
 .activeStage {
-    color: black;
+    color: white;
+    display: inline-block;
+    margin-right: 2vw;
 }
 
 .otherStage {
-    color: rgba(73, 73, 73, 0.295);
+    color: rgba(170, 170, 170, 0.562);
     transition: all .4s;
+    display: inline-block;
+    margin-right: 2vw;
 }
 
 .otherStage:hover {
@@ -37,4 +47,14 @@
 
 .startfield {
     background-color: rgb(60, 255, 0);
+}
+
+#checklistCon {
+    vertical-align: top;
+    position: relative; 
+    padding:2%;
+    height: 7vh;
+}
+
+#pathCon {
 }
