--- a/main.css
+++ b/main.css
@@ -58,3 +58,11 @@ body {
 
 #pathCon {
 }
+
+#maze {
+    height: 100%; 
+    width: 100%; 
+    padding:0px; 
+    border-collapse: collapse;
+    position: relative;
+}
