made a clearmap function, made the djikstra go faster based on amount of surrounding to be visited nodes

--- a/main.css
+++ b/main.css
@@ -56,13 +56,14 @@ body {
     height: 7vh;
 }
 
-#pathCon {
-}
-
 #maze {
     height: 100%; 
     width: 100%; 
     padding:0px; 
     border-collapse: collapse;
     position: relative;
+}
+
+td{ 
+    transition: all .2s;
 }
