--- a/main.css
+++ b/main.css
@@ -1,69 +1,206 @@
 body {
-    margin:0px;
-    padding:0px;
-}
-
-.block:hover {
-    cursor: pointer;
-    background-color: rgb(0, 0, 0);
-    opacity: 10%;
-}
-
-.block {
-    opacity: 2%;
-}
-
-.unblock:hover {
-    cursor: pointer;
-    background-color: rgb(60, 255, 0);
-}
-
-.unblock {
-    opacity: 10%;
-}
-
-.fieldButtons:hover {
-    cursor: pointer;
-    color: rgb(60, 255, 0);
-}
-
-.activeStage {
-    color: white;
-    display: inline-block;
-    margin-right: 2vw;
-}
-
-.otherStage {
-    color: rgba(170, 170, 170, 0.562);
-    transition: all .4s;
-    display: inline-block;
-    margin-right: 2vw;
-}
-
-.otherStage:hover {
-    cursor: pointer;
-    color: rgb(60, 255, 0);
-}
-
-.startfield {
-    background-color: rgb(60, 255, 0);
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 #checklistCon {
-    vertical-align: top;
-    position: relative; 
-    padding:2%;
-    height: 7vh;
-}
-
-#maze {
-    height: 100%; 
-    width: 100%; 
-    padding:0px; 
-    border-collapse: collapse;
+    width: 100vw;
+    height: 10vh;
+    background-color: rgb(0, 140, 255);
+    position: fixed;
+    color: white;
     position: relative;
 }
 
-td{ 
-    transition: all .2s;
+#checklist {
+    list-style-type: none;
+    width: 50%;
+    position: absolute;
+    top: 33%;
+    transform: translateY(-50%);
+}
+
+#checklist li {
+    display: inline-block;
+    margin-right: 7%;
+}
+
+#finishbut {
+    background-color: #5cb85c;
+    border: 2px solid green;
+    border-radius: 4px;
+    color: white;
+    position: absolute;
+    vertical-align: middle;
+    height: 150%;
+    width: 15%;
+    transform: translateY(-15%);
+}
+
+#clearBut {
+    background-color: #d9534f
+    ;
+    border: 2px solid #b84743;
+    ;
+    border-radius: 4px;
+    color: white;
+    position: absolute;
+    vertical-align: middle;
+    height: 150%;
+    width: 15%;
+    margin-left: 16%;
+    transform: translateY(-15%);
+}
+
+#finishbut:focus, #clearBut:focus {
+    outline: none;
+}
+
+
+#pathCon {
+    position: absolute;
+    right: 0;
+    width: 30%;
+    height: 100%;
+    margin: 0;
+    top: 100%;
+    transform: translateY(-100%);
+}
+
+#paths {
+    margin-top: 1%;
+    width: 100%;
+    margin-bottom: 0;
+    padding: 0;
+}
+
+#paths p {
+    display: inline-block;
+    margin-bottom: 3%;
+    margin-right: 5%;
+}
+
+#speed {
+    display: block;
+    position: relative;
+}
+
+#speed p {
+    display: inline-block;
+    margin-right: 2%;
+    margin-top: 0;
+}
+
+#speedSelector {
+    background-color: rgb(0, 174, 255);
+    border: 2px solid rgba(92, 92, 255, 0.678);
+    border-radius: 4px;
+    color: white;
+    position: absolute;
+    height: 85%;
+    width: 30%;
+    transform: translateY(-20%);
+    justify-content: center;
+}
+
+#speedSelector:focus {
+    outline:none;
+}
+
+#speedSelector:hover {
+    cursor: pointer;
+}
+
+#runBut {
+    position: absolute;
+    right: 15%;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #5cb85c;
+    border: 2px solid green;
+    border-radius: 4px;
+    color: white;
+    height: 50%;
+    width: 20%;
+    transform: translateY(-50%);
+}
+
+#runBut:focus {
+    outline: none;
+}
+
+button:hover {
+    cursor: pointer;
+    box-shadow: 2px 4px rgb(47, 0, 255);
+}
+
+.otherStage {
+    color: rgb(182, 182, 182);
+}
+
+.otherStage:hover {
+    color: rgb(0, 255, 0);
+    text-decoration: underline;
+}
+
+.table {
+    height: 80vh;
+    width: 80vw;
+    table-layout: fixed;
+    border: 2px solid rgb(0, 132, 255);
+    border-collapse: collapse;
+}
+
+td {
+    table-layout: fixed;
+    vertical-align: top;
+    border: 2px solid rgb(0, 132, 255);
+    box-sizing: border-box;
+    transition: all .3s ease-out;
+    height: calc(80vh / 30)vh !important;
+    margin:0;
+    padding: 0;
+    text-align: center;
+    z-index: 0;
+    position: relative;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none;
+}
+
+
+.distTxt {
+    font-size: 80%;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 50%;  
+    left: 50%; 
+    transform: translate(-50%, -50%);
+    z-index: 0;
+    color: rgb(0, 0, 0);
+}
+
+tr{
+    border: 2px solid rgb(0, 132, 255);
+    height: calc(80vh / 30)vh;
+    overflow: hidden;
+}
+
+#maze{
+    margin-top: 1%;
+    width: 80%;
+    margin-left: 10%;
+    border-radius: 2px;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    height: 10vh;
+
 }
