--- a/main.css
+++ b/main.css
@@ -199,8 +199,30 @@ tr{
 }
 
 .footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
-    height: 10vh;
+    height: 5vh;
+    width: 100%;
+    background-color: #536878;
+    text-align: center;
+    font-size: x-large;
+}
 
+.footer h5 {
+    margin:0;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+.footer a {
+    font-size: xx-large;
+    color: white;
+}
+
+.footer a:hover {
+    font-size: xx-large;
+    color: rgb(0, 255, 0);
 }
