--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ body {
 
 #checklist {
     list-style-type: none;
-    width: 50%;
+    width: 45%;
     position: absolute;
     top: 33%;
     transform: translateY(-50%);
@@ -26,31 +26,36 @@ body {
     margin-right: 7%;
 }
 
+#checkButs {
+    position: relative;
+    display: inline-block;
+    height: 100%;
+    width: 17%;
+    margin-left: 45%;
+    top: 50%;
+    transform: translateY(-25%);
+}
+
 #finishbut {
     background-color: #5cb85c;
     border: 2px solid green;
     border-radius: 4px;
     color: white;
     position: absolute;
-    vertical-align: middle;
-    height: 150%;
-    width: 15%;
-    transform: translateY(-15%);
+    left: 2%;
+    height: 50%;
+    width: 45%;
 }
 
 #clearBut {
-    background-color: #d9534f
-    ;
+    background-color: #d9534f;
     border: 2px solid #b84743;
-    ;
     border-radius: 4px;
     color: white;
     position: absolute;
-    vertical-align: middle;
-    height: 150%;
-    width: 15%;
-    margin-left: 16%;
-    transform: translateY(-15%);
+    height: 50%;
+    right: 2%;
+    width: 45%;
 }
 
 #finishbut:focus, #clearBut:focus {
@@ -61,7 +66,7 @@ body {
 #pathCon {
     position: absolute;
     right: 0;
-    width: 30%;
+    width: 33%;
     height: 100%;
     margin: 0;
     top: 100%;
@@ -69,21 +74,31 @@ body {
 }
 
 #paths {
-    margin-top: 1%;
     width: 100%;
     margin-bottom: 0;
     padding: 0;
 }
 
-#paths p {
+#pathsUl {
+    list-style-type: none;
+    width: 70%;
+    position: absolute;
+    top: 25%;
+    transform: translateY(-50%);
+    margin:0;
+    padding: 0;
+}
+
+#pathsUl li {
     display: inline-block;
-    margin-bottom: 3%;
     margin-right: 5%;
 }
 
 #speed {
     display: block;
-    position: relative;
+    position: absolute;
+    bottom: 5%;
+    width: 50%;
 }
 
 #speed p {
@@ -99,7 +114,7 @@ body {
     color: white;
     position: absolute;
     height: 85%;
-    width: 30%;
+    width: 70%;
     transform: translateY(-20%);
     justify-content: center;
 }
@@ -114,7 +129,7 @@ body {
 
 #runBut {
     position: absolute;
-    right: 15%;
+    right: 10%;
     top: 50%;
     transform: translateY(-50%);
     background-color: #5cb85c;
@@ -200,7 +215,7 @@ tr{
 }
 
 .footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     height: 5vh;
     width: 100%;
@@ -226,4 +241,194 @@ tr{
 .footer a:hover {
     font-size: xx-large;
     color: rgb(0, 255, 0);
+}
+
+@media all and (min-width: 1442px){
+    #checklistCon {
+        font-size: large;
+    }
+
+    #checkButs {
+        margin-left: 35%;
+    }
+
+    #maze{
+        margin-left: 0;
+    }
+
+    .table {
+        margin-left: 20vw;
+        width: 60vw;
+    }
+
+}
+
+
+@media all and (max-width: 936px){
+    #checklist {
+        width: 25%;
+    }
+    #checklist li {
+        margin-right: 7%;
+        display: block;
+    }
+
+    #checkButs {
+        margin-left: 30%;
+    }
+
+    #pathCon {
+        right: 2%;
+        width: 45%;
+    }
+
+    #paths {
+        display: inline-block;
+        width: 30%;
+    }
+
+    #pathsUl {
+        display: inline-block;
+        top: 50%;
+        width: 40%;
+    }
+
+    #paths p {
+        margin: 0;
+    }
+    
+    #paths li {
+        margin: 0;
+        display: block;
+    }
+
+    #speed {
+        display: inline-block;
+        position: absolute;
+        left: 40%;
+        top: 15%;
+        width: 30%;
+    }
+    
+    #speed p {
+        display: block;
+    }
+
+    #speedSelector{
+        display: block;
+        width: 90%;
+        height: 50%;
+    }
+
+    #runBut{
+        left: 80%;
+        width: 15%;
+    }
+}
+
+@media all and (max-width: 640px){
+    #maze {
+        margin-left: 0;
+    }
+
+    .table {
+        width: 98vw;
+        margin-left: 1vw;
+    }
+
+    #checklistCon {
+        height: 15vh;
+    }
+
+    #checklist {
+        top: 0;
+        transform: translateY(0);
+        width: 100%;
+        position: relative;
+        display: inline-block;
+        padding: 0;
+        margin: 0;
+        margin-top: 1%;
+    }
+
+    #checklist li {
+        width: 33%;
+        display: inline-block;
+        margin:0;
+        text-align: center;
+        font-size: large;
+    }
+
+    #checkButs {
+        position: relative;
+        display: block;
+        width: 60%;
+        margin: 0;
+        margin-left: 20%;
+        top: 8%;
+        transform: translateY(0);
+    }
+
+    #checkButs button {
+        height: 30%;
+        margin: 0;
+    }
+
+    #pathCon {
+        margin: 0;
+        position: absolute;
+        top: 60%;
+        transform: translateY(0);
+        height: 40%;
+        width: 100%;
+    }
+
+    #paths {
+        margin: 0;
+        width: 50%;
+        height: 30%;
+    }
+
+    #pathsUl {
+        position: relative;
+        margin: 0;
+        width: 100%;
+        margin-left: 10%;
+    }
+    
+    #pathsUl li{
+        display: inline-block;
+        margin-right: 5%;
+    }
+
+    #speed {
+        position: relative;
+        top: 0;
+        left: 0;
+        margin:0;
+        margin-left: 5%;
+    }
+
+    #speed p {
+        margin: 0;
+        margin-bottom: 3%;
+        font-size: medium;
+    }
+
+    #speedSelector {
+        position: relative;
+        display: block;
+        height: 40%;
+    }
+
+    #runBut {
+        height: 70%;
+        left: 85%;
+    }
+
+    .footer{
+        height: 3.5vh;
+    }
+
+    
 }
